Closed Bug 362597 Opened 18 years ago Closed 18 years ago

Increased Rlk (leak) on balsa after landing of bug 354787

Categories

(Core :: Internationalization, defect)

x86
Linux
defect
Not set
minor

Tracking

()

VERIFIED FIXED

People

(Reporter: ispiked, Assigned: bent.mozilla)

References

Details

(Keywords: memory-leak, regression)

Attachments

(1 file, 2 obsolete files)

--NEW-LEAKS-----------------------------------leaks------leaks%
nsCaseConversionImp2                             12          -

2524	MOZ_CO_DATE=2006:12:01:10:44
2536	MOZ_CO_DATE=2006:12:01:12:16

Check-ins: http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006%3A12%3A01%3A10%3A44%3A00&maxdate=2006%3A12%3A01%3A12%3A16%3A00&cvsroot=%2Fcvsroot

Not a huge deal, but probably something that should be fixed.
I think this is WONTFIX as the basic idea was to leave a static instance hanging around that would persist through XPCOM re-initialization.
Assignee: smontagu → bent.mozilla
agree, but why are we leaking 12 objects? or is that 12 bytes?
That's 12 bytes ( = 1 instance).

-> WONTFIX
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → WONTFIX
We should make it not screw up the leak stats. Can we just remove refcnt logging from this class?
Status: RESOLVED → REOPENED
Resolution: WONTFIX → ---
If I'm reading this right then we'd have to manually implement addref/release. Is there no other way to disable refcount logging?
Correct.
Attached patch Patch (obsolete) — Splinter Review
Here we go.
Attachment #247467 - Flags: review?(benjamin)
Status: REOPENED → ASSIGNED
Why don't we just make the refcount always 1? This object never gets destroyed anyway.
Why do we have a refcount at all?
Wait, so you want them to be no-ops? Right now no one else creates one of these guys, but do we really want to neuter all instances?
Why do we need more than one of them? Always return the singleton instance.
Attachment #247467 - Flags: review?(benjamin) → review-
Attached patch Patch (obsolete) — Splinter Review
Okay, now just returns 1.
Attachment #247467 - Attachment is obsolete: true
Attachment #247899 - Flags: review?(benjamin)
Comment on attachment 247899 [details] [diff] [review]
Patch

This is ok, but I think you still need a singleton-constructor.
Attachment #247899 - Flags: review?(benjamin) → review+
Attached patch PatchSplinter Review
Now with singleton constructor. I also removed the unused and potentially problematic NS_NewCaseConversion function.
Attachment #247899 - Attachment is obsolete: true
Attachment #250367 - Flags: review?(benjamin)
Attachment #250367 - Flags: review?(benjamin) → review+
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago18 years ago
Resolution: --- → FIXED
And nsCaseConversionImp2 has dropped from the rlk logs
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: