Bug 362597 - "Increased Rlk (leak) on balsa after landing of bug 354787". r=bsmedberg.