intl/unicharutil/src/nsUcharUtilConstructors.h
@@ -80,7 +80,8 @@ CreateNew##_name(nsISupports* aOuter, REFNSIID aIID, void **aResult) \
 
 UNICHARUTIL_MAKE_CTOR(HankakuToZenkaku)
 
-NS_GENERIC_FACTORY_CONSTRUCTOR(nsCaseConversionImp2)
+NS_GENERIC_FACTORY_SINGLETON_CONSTRUCTOR(nsCaseConversionImp2,
+                                         nsCaseConversionImp2::GetInstance)
 NS_GENERIC_FACTORY_CONSTRUCTOR(nsEntityConverter)
 NS_GENERIC_FACTORY_CONSTRUCTOR(nsSaveAsCharset)
 NS_GENERIC_FACTORY_CONSTRUCTOR(nsUnicodeNormalizer)
